<resources>
    <string name="app_name">Osyclo</string>
    <string name="title_map">Map</string>
    <string name="title_routes">Routes</string>
    <string name="title_profile">My Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="weathericon">Weathericon</string>
    <string name="uv_icon">uv_icon</string>
    <string name="wind_direction">wind_direction</string>

    <string name="air_temperature">%1$s°</string>

    <string name="route_title">%1$s to %2$s</string>
    <string name="air_quality">%1$s %2$s</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="latLong">Longitude: %.3f, Latitude: %.3f</string>
    <string name="enable_gps">Please enable your gps</string>
    <string name="permission_request">App requires location permission</string>

    <string name="first_name">First name:</string>
    <string name="First_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="Last_name">Last name</string>
    <string name="full_name">Full name</string>
    <string name="settings">Settings</string>
    <string name="label_total_kilometers">Total Km:</string>
    <string name="label_weekly_kilometers">Weekly Km:</string>
    <string name="total_km">0</string>
    <string name="weekly_km">0</string>
    <string name="level">Level:</string>
    <string name="my_favourite_routes">My favourite routes</string>
    <string name="my_history">My history</string>

    <string name="full_name_text">%1$s %2$s</string>
    <string name="add_kilometers">+%1$s</string>

    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="deactivate_account">Deactivate Account</string>

    <string name="exit_button">Exit button</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="email">Email</string>
    <string name="save">Save</string>

    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="app_logo">App logo</string>
    <string name="password">Password</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>

    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Email">Email:</string>
    <string name="signing_in">Sign in</string>

    <string name="complete">Complete</string>

    <string name="routesIntro">
        Filter popular routes other people have biked by the factors air quality, length and difficulty\n \n
        You can also get information the routes average airborne dust levels, distance and estimated duration\n \n
        Try out some routes and get up your total KM, don\'t forget to bookmark a route you enjoyed
    </string>

    <string name="mapIntro">
        Get an overview of all the signposted cycle paths in Oslo and the weatherforecast on your location\n \n
        You can also use the map to navigate to a Bysykkel station to borrow a bike\n \n
        Lastly, you can see data about airborne dust from environmental stations located in the city
    </string>

    <string name="profileIntro">
        Finally in the profile you can keep track of your progress and find your bookmarked routes
    </string>


    <string-array name="sortBy">
        <item>Air quality</item>
        <item>Length</item>
        <item>Difficulty</item>
    </string-array>

    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="skip">SKIP</string>
    <string name="walking">WALKING</string>
    <string name="walking_desc">Go for a walk</string>
    <string name="cycling">Cycling</string>
    <string name="cycling_desc">if you can\'t run, can\'t walk</string>
    <string name="fit">Become FIT</string>
    <string name="fit_desc">Do either</string>
    <string name="swimming">Swimming</string>
    <string name="swimming_desc">Explore the world under water</string>
    <string name="running">Running</string>
    <string name="running_desc">Daily running</string>
    <string name="image_of_route">Image of route</string>
    <string name="bookmark_icon">Bookmark icon</string>
    <string name="m_s">m/s</string>
    <string name="air_quality_button">Air Quality button</string>
    <string name="trophy_icon">Trophy icon</string>
    <string name="route_icon">Route icon</string>
    <string name="routes">Routes</string>
    <string name="profile_icon">Profile icon</string>
    <string name="profile">Profile</string>
    <string name="map_icon">Map icon</string>
    <string name="map">Map</string>


</resources>