<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">


    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.example.sykkelapp.ui.route.RouteFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.sykkelapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sykkelapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>