<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_route_24"
        android:contentDescription="@string/route_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/routes"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/routesIntro"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    />

</LinearLayout>